#4 fix: 구매한 용품, 예약한 용품 목록에서 구매할 때의 가격